# pensjon-data-analyse

./: .gitignore  README.md  justfile  lokal-kjøring.sh  pyproject.toml  requirements.txt  run_psak_notebook.py
.github/: dependabot.yaml
common/: README  initcontainers.py  notifications.py  podop_factory.py
dags/: aldersovergang.py  analyse_pen_dataprodukt.py  behandlingsstatistikk.py  daglige_dataprodukter.py  daglige_gamle_datafortellinger.py  dataproduct-aldersovergang.py  dataproduct-automatisering-v2.py  dataprodukt_behandlingsstatistikk.py  dataprodukter_daglig.py  dataprodukter_ukentlig.py  dbt_analyse.py  dbt_behandlingsstatistikk.py  dbt_docs.py  dbt_snapshot_analyse.py  dbt_stonad.py  dvh_sak.py  dvh_stonad.py  eo_oversikt.py  eo_oversikt_manuell.py  last_fra_api.py  manuell_oracle_spørring.py  oracle_query.py  oracle_til_bq_sak.py  oracle_til_bq_stonad.py  quarto-uforemottakere.py  quarto_inforskjermer.py  sql_pilot_alderspensjon.py  teamkatalogen_historikk.py  teamkatalogen_historisering.py
images/: __init__.py  get_image.py  test_get_image.py
lib/: autograd_convenience.py  autograd_plot.py  operative.py  pandas_utils.py  pesys_utils.py  story.py  utils.py
notebooks/: Autograd_pen.ipynb  Automatisering_dp2.ipynb  Dashboard.ipynb  Fremtidsutsikter.ipynb  Iverksettelse.ipynb  Saksbehandling.ipynb  Sharepoint_test.ipynb  anvendt_vurdering.ipynb  auto_AP.ipynb  auto_new.ipynb  auto_selv_alle_ytelser.ipynb  auto_selvbetjening.ipynb  bpen002_oppg.ipynb  dataproduct_auto.ipynb  dataproduct_automatisering.ipynb  dataproduct_automatisering_v2.ipynb  dataproduct_automatisering_v3.ipynb  dataproduct_kontrollpunkt.ipynb  dataproduct_laaste_vedtak.ipynb  dataproduct_operative_mal.ipynb  dataproduct_tilfredshet.ipynb  dataproducts.ipynb  datastory_automatisering.ipynb  datastory_etterlatte.ipynb  datastory_fellesordningen.ipynb  datastory_ledetid_krav_til_behandling.ipynb  datastory_trygdetid_utland.ipynb  etterlatte.ipynb  fellesordningen.ipynb  fremtidsutsikter.ipynb  iverksettelse.ipynb  kontrollpunkt_forstegang.ipynb  kravstatus.ipynb  ledetid.ipynb  ledetid_krav_til_behandling.ipynb  popp.ipynb  psak_nytt_design.ipynb  psak_nytt_design_utforskning.ipynb  quarto_testing.ipynb  retur_arsak.ipynb  (+2 more)
operators/: dbt_operator.py
quarto/: bemanning.qmd  bpen002_oppg.qmd  feilutbetalinger_alderspensjon.qmd  fellesordningen.qmd  glemte_krav.qmd  infoskjerm-i-A6-plott.qmd  infoskjerm-i-A6.qmd  pesysytelser.qmd  trygdetid_utland.qmd  uforemottakere.qmd  update_quarto.ipynb
scripts/: aldersovergang.py  autobrev_inntektsendring.py  bemanningsoversikt.py  dataproduct_aldersovergang.py  dataproduct_automatisering_v1.py  dataproduct_automatisering_v2.py  dataproduct_kontrollpunkt.py  dataproduct_kravstatus.py  dataproduct_laaste_vedtak.py  dataproduct_psak_nytt_design.py  dataprodukt_brev.py  datastory_automatisering.py  datastory_etterlatte.py  datastory_fellesordningen.py  datastory_glemte_krav.py  dvh_sak_alder_og_ufore.py  dvh_sak_alder_og_ufore_v2.py  dvh_sak_ufore.py  dvh_stonad_alder.py  eo_oversikt.py  feilutbetalinger.py  fjerner_duplikater_manuelt.py  forstegangsvedtak.py  infoskjerm_ytelser.py  inntektsendring_og_autobrev.py  last_norg2_intern_nav.py  manedlig_omregning.py  manuell_oracle_query.py  quarto_glemte_krav.py  teamkatalogen_historisering.py  ufore_diagnosekoder.py  vedtakstyper.py
sql/: Autograd_DP.sql  Forstegangskrav_AP_DP.sql  Forstegangskrav_mnd.sql  PSAK120_query.sql  README.md  afp_priv_ledetid.sql  afp_priv_res.sql  aldersovergang_automatisering.sql  aldersovergang_behandle_bruker.sql  aldersovergang_brev.sql  alderspensjon_databaselink.sql  anvendt_vurdering.sql  auto_krav_aar.sql  autobrev_inntektsendring.sql  automatiseringsgrad_test.sql  automatiseringsgrad_test_virk.sql  behandling_behandlingstid.sql  bpen002_oppg.sql  (+67 more)
(+88 files in other folders)
