[project]
name = "pensjon-data-analyse"
version = "0.1.0"
description = "Dataanalyse for pensjon og uføretrygd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "pandas>=3.0.2",
    "plotly>=6.7.0,<7.0.0", # Plotly > 6.0.0 og quarto dashbords er ikke kompatible
    "itables>=2.2.5",
    "oracledb>=2.5.1",
    "pyarrow>=19.0.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "db-dtypes>=1.4.2",
    "jupyterlab>=4.3.5",
    "pandas-gbq>=0.35.0",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-secret-manager>=2.23.0",
    "google-cloud-bigquery-storage>=2.30.0",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "dataverk-airflow>=1.7.15",
    "pendulum>=3.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "sqlfluff>=3.4.2",
]

[tool.ruff]
include = ["*.py", "*.ipynb"]
line-length = 120

[tool.sqlfluff.core]
dialect = "ansi"
templater = "jinja"
max_line_length = 0
ignore_paths = [ ".venv/" ]
exclude_rules = [ # regler som kan/vil knekke noe
    # "all",
    "ambiguous.join",
    "aliasing.table",
    "structure.column_order",
    "references.qualification",
    "structure.join_condition_order",
]
[tool.sqlfluff.rules.capitalisation]
keywords.capitalisation_policy = "lower"
literals.capitalisation_policy = "lower"
types.extended_capitalisation_policy = "lower"
functions.extended_capitalisation_policy = "lower"
identifiers.extended_capitalisation_policy = "lower"
